# automata-exchange-repository

./: README.md  setup.cfg
exchangeraterepo/repository/: ExchangeRateRepository.py
simulations/api/: delete-all-timeseries-points.sh  fetch-all-timeseries.sh
tests/exchangeraterepo/: ExchangeRateRepository_test.py
tests/exchangerepo/: ExchangeRateRepository_test.py  InstrumentExchangeRepository_test.py
