[metadata]
name = persuader-technology-automata-exchange-rate-repository
version = 0.0.2
description = Automata Exchange Rate Repository
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.1.7
    persuader-technology-automata-exchange-rates>=0.0.6
    persuader-technology-automata-redis>=0.1.2

[options.packages.find]
include = exchangeraterepo*
exclude =
    tests
    simulations
    .scripts
